# wasi-classify

./: Cargo.toml
src/: classification.rs  main.rs
