[package]
name = "wasi-classification"
version = "0.1.0"
edition = "2024"
authors = ["The Wasmtime Project Developers + Quark"]
readme = "README.md"
publish = false

[dependencies]
actix-web = "4"
image = { version = "0.25.2", default-features = false, features = ["jpeg"] }
ndarray = "0.16.1"
wit-bindgen = { version = "0.32.0", default-features = ["macros"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:classification-component-onnx"

[package.metadata.component.target.dependencies]

# This crate is built with the wasm32-wasip1 target, so it's separate
# from the main Wasmtime build, so use this directive to exclude it
# from the parent directory's workspace.
[workspace]
